--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
     "react-html5video": "^2.5.1",
     "react-icons": "^4.7.1",
     "react-player": "^2.11.2",
